# claude-plugins

./: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.ollama  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: docker-release.yml
creative-frontend/: README.md
creative-frontend/.claude-plugin/: plugin.json
creative-frontend/skills/frontend-design/: SKILL.md
creative-frontend/skills/webgpu-threejs-tsl/: SKILL.md
godot-claude/: README.md
godot-claude/.claude-plugin/: plugin.json
godot-claude/agents/: godot-architect.md  godot-artist.md  godot-code-reviewer.md  godot-developer.md  godot-performance-analyzer.md  godot-publisher.md
godot-claude/agents.bak/: godot-code-reviewer.md  godot-performance-analyzer.md
godot-claude/commands/: godot-audio.md  godot-export.md  godot-fsm.md  godot-gdd.md  godot-implement.md  godot-nav.md  godot-netcode.md  godot-perf.md  godot-release.md  godot-scene.md  godot-shader.md  godot-structure.md  godot-xr.md
godot-claude/hooks/: hooks.json
godot-claude/skills/godot-animation/: SKILL.md
mcp-app-next-ui/: LICENSE.txt  README.md
mcp-app-next-ui/.claude-plugin/: plugin.json
ollama-proxy/: anthro_to_openai_proxy.py  requirements.txt  start.sh
open-responses/: README.md
open-responses/.claude-plugin/: plugin.json
tool-creator/: README.md
tool-creator/.claude-plugin/: plugin.json
tool-creator/commands/: create-tool.md
tool-creator/skills/tool-creator/assets/cli-template/: README.md  pyproject.toml
tool-creator/skills/tool-creator/assets/cli-template/src/my_tool/: __init__.py  main.py
(+81 files in other folders)
